[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "psychopy-connect"
version = "0.0.2"
description = "Extension package for adding support to PsychoPy for connectivity i.e. serial and parallel ports."
readme = "README.md"
requires-python = ">= 3.7"
license = {text = "GNU General Public License v3 (GPLv3)"}
authors = [
  { name = "Jon Peirce", email = "jon@opensceincetools.org" },
  { name = "Matthew Cutone", email = "mcutone@opensceincetools.org" },
]
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
]
urls.homepage = "https://github.com/psychopy/psychopy-connect"
urls.changelog = "https://github.com/psychopy/psychopy-connect/blob/main/CHANGELOG.txt"
urls.documentation = "https://pages.github.com/psychopy/psychopy-connect"
urls.repository = "https://github.com/psychopy/psychopy-connect"
dependencies = [
  "pyparallel; sys_platform == 'linux'",
  "pyserial",
  "psychopy-labhackers",
  "psychopy-labjack",
]

[tool.setuptools.packages.find]
where = ["",]

[tool.setuptools.package-data]
"*" = ["*.png",]

[project.entry-points."psychopy.experiment.components"]
SerialOutComponent = "psychopy_connect:SerialOutComponent"
ParallelOutComponent = "psychopy_connect:ParallelOutComponent"